[tool.poetry]
name = "bayes_ship"
version = "0.1.0"
description = "Following Chapter 1 of Lee Vaughn's \"Real World Python\""
authors = ["David <oconned6@tcd.ie>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
opencv-contrib-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
