[tool.poetry]
name = "bayes_ship"
version = "0.1.0"
description = "Following Chapter 1 of Lee Vaughn's \"Real World Python\""
authors = ["David <oconned6@tcd.ie>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.4"
opencv-contrib-python = "^4.5.5"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
ipython = "^8.4.0"
jupyter = "^1.0.0"
pandas = "^1.4.2"
sympy = "^1.10.1"
nose = "^1.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
